# taskim

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.tape  main.js  package-lock.json  package.json
public/: manifest.json
src/: App.js  CanvasPrompt.jsx  CustomMonthView.js  DraggableTask.js  GoalManager.js  MonthView.js  QuarterView.js  SearchResults.js  TaskCalendar.js  TaskManagerCalendar.js  TaskView.js  WeekView.js  YearView.js  commands.rs  config.rs  data.rs  index.css  index.js  main.rs  month_view.rs  task.rs  task_edit.rs  undo.rs
taskim/: Cargo.toml  config.yml
taskim/src/: config.rs  data.rs  main.rs  month_view.rs  task.rs  task_edit.rs  undo.rs  utils.rs
