[package]
name = "taskim"
version = "0.1.0"
edition = "2021"
authors = ["Rohan Adwankar <rohan.adwankar@gmail.com>"]
description = "TUI Task Manager with vim-ish motions"
repository = "https://github.com/RohanAdwankar/taskim"
license = "MIT"
license-file = "LICENSE"
keywords = ["task","vim","neovim","todo"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["local-offset", "macros", "formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_yaml = "0.9.34"
